# bot-habit-tracker

./: .env.template  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
api/: deps.py
api/api_v1/: router.py
api/api_v1/endpoints/: habits.py  users.py
bot/: bot_instance.py  handlers.py  keyboards.py
core/: config.py  security.py
crud/: crud_habit.py  crud_user.py
db/: base.py  session.py
models/: habit.py  user.py
notifications/: scheduler.py
schemas/: habit.py  user.py
scripts/: notification.py
services/: habit_service.py  notification_service.py
