[project]
name = "bot-thabit-tracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.1",
    "apscheduler>=3.11.1",
    "fastapi>=0.121.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pytelegrambotapi>=4.29.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "python-telegram-bot>=22.5",
    "ruff>=0.14.3",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
